@@ -1,3 +1,8 @@
+2015-03-17  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/set.c: Revise many internal routines in set.c to use axis pointers
+	rather than AXIS_INDEX.
+
 2015-03-14  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/axis.h src/plot2d.c:  Revise macros AXIS_INIT2D and (the big one)
